welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:5: error: not found: value lookingFor
     if (nums(i)==lookingFor) {
                  ^